--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^9.6.1",
-    "cypress-xpath": "^1.6.2"
+    "cypress-mochawesome-reporter": "^3.1.0",
+    "cypress-xpath": "^1.6.2",
+    "mochawesome": "^7.1.3",
+    "mochawesome-report-generator": "^6.2.0"
   }
 }
