--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:runHeadless": "cypress run --browser chrome --headless --spec cypress/integration/*.spec.js",
+    "cy:runHeaded": "cypress run --browser chrome --headed --spec cypress/integration/*.spec.js"
   },
   "author": "",
   "license": "ISC",
